--- a/style.scss
+++ b/style.scss
@@ -80,23 +80,28 @@ body {
         border-radius: 16px;
 
         &_text {
-            position: absolute;
-            left: 32px;
-            top: 236px;
-            font-family: "Montserrat";
-            font-style: normal;
-            font-weight: 600;
-            font-size: 24px;
-            line-height: 32px;
-            color: #FFFFFF;
+            =======&:hover {
+                outline: 3px solid #44D2FF;
+            }
+
+            &-text {
+                position: absolute;
+                left: 32px;
+                top: 236px;
+                font-family: "Montserrat";
+                font-style: normal;
+                font-weight: 600;
+                font-size: 24px;
+                line-height: 32px;
+                color: #FFFFFF;
+            }
+
+            &_text:hover {
+                text-decoration: underline;
+            }
         }
 
-        &_text:hover {
-            text-decoration: underline;
+        &__game:hover {
+            outline: 3px solid #44D2FF;
         }
     }
-
-    &__game:hover {
-        outline: 3px solid #44D2FF;
-    }
-}
